force-app/main/default/objects/PIP_Verification__c/PIP_Verification__c.object-meta.xml
<CustomObject>
    <label>PIP Verification</label>
    <nameField>
        <displayFormat>PIP-{000000000}</displayFormat>
        <label>PIP Verification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PIP Verifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>