force-app/main/default/objects/PIP_Verification__c/fields/Attorney_Lawyer__c.field-meta.xml
<CustomField>
    <fullName>Attorney_Lawyer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Attorney/Lawyer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>PIP Verifications (Attorney/Lawyer)</relationshipLabel>
    <relationshipName>PIP_Verifications2</relationshipName>
    <type>Lookup</type>
</CustomField>