force-app/main/default/objects/PIP_Verification__c/fields/Claim__c.field-meta.xml
<CustomField>
    <fullName>Claim__c</fullName>
    <label>Claim #</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>