force-app/main/default/objects/PIP_Verification__c/fields/Cut_Off_Specialties__c.field-meta.xml
<CustomField>
    <fullName>Cut_Off_Specialties__c</fullName>
    <label>Cut Off Specialties</label>
    <length>255</length>
    <type>Text</type>
</CustomField>