force-app/main/default/objects/PIP_Verification__c/fields/Date_of_Accident__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Accident__c</fullName>
    <label>Date of Accident</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>