force-app/main/default/objects/PIP_Verification__c/fields/Does_the_policy_belong_to_the_patient__c.field-meta.xml
<CustomField>
    <fullName>Does_the_policy_belong_to_the_patient__c</fullName>
    <label>Does the policy belong to the patient?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>