force-app/main/default/objects/PIP_Verification__c/fields/Driver_or_Passenger__c.field-meta.xml
<CustomField>
    <fullName>Driver_or_Passenger__c</fullName>
    <label>Driver or Passenger?</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Driver</fullName>
            </value>
            <value>
                <fullName>Passenger</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>