force-app/main/default/objects/PIP_Verification__c/fields/Funds_Available__c.field-meta.xml
<CustomField>
    <fullName>Funds_Available__c</fullName>
    <label>Funds Available?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>