force-app/main/default/objects/PIP_Verification__c/fields/Hospital_Urgent_Care__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Urgent_Care__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hospital/Urgent Care went to?</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>PIP Verifications (Hospital/Urgent Care went to?)</relationshipLabel>
    <relationshipName>PIP_Verifications1</relationshipName>
    <type>Lookup</type>
</CustomField>