force-app/main/default/objects/PIP_Verification__c/fields/Insurance_Company_Address__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Company_Address__c</fullName>
    <label>Insurance Company Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>