force-app/main/default/objects/PIP_Verification__c/fields/Insurance_Verification__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Verification__c</fullName>
    <label>Insurance Verification</label>
    <referenceTo>Insurance_Verification__c</referenceTo>
    <relationshipLabel>PIP Verifications</relationshipLabel>
    <relationshipName>PIP_Verifications</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>