force-app/main/default/objects/PIP_Verification__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>PIP Verifications</relationshipLabel>
    <relationshipName>PIP_Verifications</relationshipName>
    <type>Lookup</type>
</CustomField>