force-app/main/default/objects/PIP_Verification__c/fields/Pending_IMEs__c.field-meta.xml
<CustomField>
    <fullName>Pending_IMEs__c</fullName>
    <label>Pending IMEs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>