force-app/main/default/objects/PIP_Verification__c/fields/PIP_MVA_Accident_Description__c.field-meta.xml
<CustomField>
    <fullName>PIP_MVA_Accident_Description__c</fullName>
    <label>PIP/MVA Accident Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>