force-app/main/default/objects/PIP_Verification__c/fields/PIP_MVA_General_Notes__c.field-meta.xml
<CustomField>
    <fullName>PIP_MVA_General_Notes__c</fullName>
    <label>PIP/MVA General Notes</label>
    <type>TextArea</type>
</CustomField>