force-app/main/default/objects/PIP_Verification__c/fields/PIP_MVA_Verification_Notes__c.field-meta.xml
<CustomField>
    <fullName>PIP_MVA_Verification_Notes__c</fullName>
    <label>PIP/MVA Verification Notes</label>
    <length>225</length>
    <type>Text</type>
</CustomField>