force-app/main/default/objects/PIP_Verification__c/fields/PIP_Primary__c.field-meta.xml
<CustomField>
    <fullName>PIP_Primary__c</fullName>
    <label>PIP Primary?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>