force-app/main/default/objects/PIP_Verification__c/fields/Policy__c.field-meta.xml
<CustomField>
    <fullName>Policy__c</fullName>
    <label>Policy #</label>
    <length>100</length>
    <type>Text</type>
</CustomField>