force-app/main/default/objects/PIP_Verification__c/fields/Policy_Max_Amount__c.field-meta.xml
<CustomField>
    <fullName>Policy_Max_Amount__c</fullName>
    <label>Policy Max Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>