force-app/main/default/objects/PIP_Verification__c/fields/Pre_Cert_Company_Address__c.field-meta.xml
<CustomField>
    <fullName>Pre_Cert_Company_Address__c</fullName>
    <label>Pre-Cert Company Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>