force-app/main/default/objects/PIP_Verification__c/fields/Pre_Cert_Fax__c.field-meta.xml
<CustomField>
    <fullName>Pre_Cert_Fax__c</fullName>
    <label>Pre-Cert Fax</label>
    <type>Phone</type>
</CustomField>