force-app/main/default/objects/PIP_Verification__c/fields/Pre_Cert_Phone__c.field-meta.xml
<CustomField>
    <fullName>Pre_Cert_Phone__c</fullName>
    <label>Pre-Cert Phone</label>
    <type>Phone</type>
</CustomField>