force-app/main/default/objects/PIP_Verification__c/fields/Send_Release_to_Fax__c.field-meta.xml
<CustomField>
    <fullName>Send_Release_to_Fax__c</fullName>
    <label>Send Release to Fax</label>
    <length>255</length>
    <type>Text</type>
</CustomField>