force-app/main/default/objects/PIP_Verification__c/fields/What_is_the_Pre_OP_Testing_Process__c.field-meta.xml
<CustomField>
    <fullName>What_is_the_Pre_OP_Testing_Process__c</fullName>
    <label>What is the Pre-OP Testing Process?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>