force-app/main/default/objects/PIP_Verification__c/fields/X21_Day_Letter_Fax__c.field-meta.xml
<CustomField>
    <fullName>X21_Day_Letter_Fax__c</fullName>
    <label>21 Day Letter Fax</label>
    <length>255</length>
    <type>Text</type>
</CustomField>